Correctly wrap the projects list on mobile

--- a/app/assets/stylesheets/yrs/views/projects.scss
+++ b/app/assets/stylesheets/yrs/views/projects.scss
@@ -7,5 +7,6 @@ header.filter {
 }
 
 .project-list {
+  @include wrap;
   @include grouped-list;
 }
